--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <li class="list-inline"><a class="link" href="/">Products</a></li>
         <li class="list-inline"><a class="link" href="/">About Us</a></li>
         <li class="list-inline"><a class="link" href="/">log-in</a></li>
+        <li class="list-inline"><a class="link" href="/">Contact Us</a></li>
         </ul>
+        
     </nav>
   <div class="fcontainer">
  <header class="hero">
